--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   </head>
   <body>
    DATOS PERSONALES<br>
+   <img src="imagenes/foto.jpg">
    EXPERIENCIA PROFESIONAL<br>
    FORMACIÓN ACADÉMICA<br>
   </body>
